# ntfs-reader

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  mise.toml
.github/workflows/: ci-check.yml  lint-build-test.yml
benches/: mft_benchmark.rs
examples/: read_journal.rs  read_mft.rs
src/: aligned_reader.rs  api.rs  attribute.rs  errors.rs  file.rs  file_info.rs  journal.rs  lib.rs  mft.rs  test_utils.rs  volume.rs
tests/: journal_tests.rs  mft_tests.rs
