[package]
name = "ntfs-reader"
version = "0.3.0"
authors = ["Matteo Bernacchia <dev@kikijiki.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Read MFT and USN journal"
repository = "https://github.com/kikijiki/ntfs-reader"
keywords = ["filesystem", "ntfs"]
categories = ["filesystem"]

[dependencies]
thiserror = "1.0.56"
binread = { version = "2.2.0", features = ["const_generics"] }
time = { version = "0.3.31" }
tracing = "0.1.40"

# For the journal
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
] }

[dev-dependencies]
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
